--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 	<name>pet-app-boot</name>
 	<description>Spring Boot PetApp</description>
 	<properties>
+  		<sonar.organization>220620-java</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
