--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,3 +4,10 @@ phases:
   build:
     commands:
       - mvn clean && mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=220620-java_p2-petapp-back
+  post_build:
+    commands:
+      - mv target/*.jar ./petapp.jar
+
+artifacts:
+  files:
+    - petapp.jar
